Changelog
=========

0.4.1 (2011-09-28)
------------------
- Fixed bug on update event [fdelia]

0.4.0 (2011-09-27)
------------------

- Changed handling of sitemapxml properties of the objects that cause the change of sitemap.xml, for pinging [fdelia]
- Fixed bug with properties override [fdelia]

0.3.0 (2011-08-05)
------------------

- Customized some viewlet templates to insert itemscope, itemtype and itemprop attributes [fdelia]
- Customized main template to insert itemscope, itemtype and itemprop attributes [fdelia]
- Added some fields to Plone SEO control panel tool [fdelia]
- Customized rss template for manage the indexing of rss feeds, depending on the check in Plone SEO control panel tool [fdelia]
- Added handling of all the events on the objects that cause the change of sitemap.xml, for pinging [fdelia]
- Added handling of sitemapxml properties of the objects that cause the change of sitemap.xml, for pinging [fdelia]
- Added handling of pinging when the sitemap.xml is updated [fdelia]


0.2.0 (2011-08-01)
------------------

- Added some fields to Plone SEO control panel tool [fdelia]
- Added some fields to SEO tab [fdelia]
- Added viewlets for script rendering in the <head> and in the portal footer [fdelia]
- Added validation for the canonical url [fdelia]
- Added ReallyUserFriendlyTypes vocabulary [fdelia]
- Personalized view for sitemap.xml.gz generation, calculate content types that should be included [fdelia]
- Added getIncludedInSitemapxml metadata and a custom index method to access this metadata [fdelia]
- Updated sitemap.xml.gz generation view, calculate whether each object should be included, according to the getIncludedInSitemapxml metadata [fdelia]
- Added validation for the priority sitemap.xml.gz [fdelia]
- Added getPrioritySitemapxml metadata and a custom index method to access this metadata [fdelia]
- Updated sitemap.xml.gz generation view, calculate priority for each object, according to the getPrioritySitemapxml metadata [fdelia]