@@ -1,40 +1,0 @@
-<div id="portal-breadcrumbs"
-	 itemprop="breadcrumb"
-     i18n:domain="plone"
-     tal:define="breadcrumbs view/breadcrumbs;
-                 is_rtl view/is_rtl">
-
-    <span id="breadcrumbs-you-are-here" i18n:translate="you_are_here">You
-are here:</span>
-    <span id="breadcrumbs-home">
-        <a i18n:translate="tabs_home"
-           tal:attributes="href view/navigation_root_url">Home</a>
-        <span tal:condition="breadcrumbs" class="breadcrumbSeparator">
-            <tal:ltr condition="not: is_rtl">&rsaquo;</tal:ltr>
-            <tal:rtl condition="is_rtl">&lsaquo;</tal:rtl>
-        </span>
-    </span>
-    <span tal:repeat="crumb breadcrumbs"
-          tal:attributes="dir python:is_rtl and 'rtl' or 'ltr';
-                          id string:breadcrumbs-${repeat/crumb/number}">
-        <tal:item tal:define="is_last repeat/crumb/end;
-                              url crumb/absolute_url;
-                              title crumb/Title">
-            <a href="#"
-               tal:omit-tag="not: url"
-               tal:condition="python:not is_last"
-               tal:attributes="href url"
-               tal:content="title">
-                crumb
-            </a>
-            <span class="breadcrumbSeparator" tal:condition="not: is_last">
-                <tal:ltr condition="not: is_rtl">&rsaquo;</tal:ltr>
-                <tal:rtl condition="is_rtl">&lsaquo;</tal:rtl>
-            </span>
-            <span id="breadcrumbs-current"
-                  tal:condition="is_last"
-                  tal:content="title">crumb</span>
-         </tal:item>
-    </span>
-
-</div>
