@@ -1,21 +1,0 @@
-<nav itemscope="itemscope"
-	 itemtype="http://schema.org/SiteNavigationElement">
-<tal:sections tal:define="portal_tabs view/portal_tabs"
-     tal:condition="portal_tabs"
-     i18n:domain="plone">
-    <h5 class="hiddenStructure" i18n:translate="heading_sections">Sections</h5>
-
-    <ul id="portal-globalnav"
-        tal:define="selected_tab python:view.selected_portal_tab"
-        ><tal:tabs tal:repeat="tab portal_tabs"
-        ><li tal:define="tid tab/id"
-             tal:attributes="id string:portaltab-${tid};
-                            class python:selected_tab==tid and 'selected' or 'plain'"
-            ><a href=""
-               tal:content="tab/name"
-               tal:attributes="href tab/url;
-                               title tab/description|nothing;">
-            Tab Name
-            </a></li></tal:tabs></ul>
-</tal:sections>
-</nav>
