@@ -1,0 +1,9 @@
+<?xml version="1.0"?>
+<rolemap>
+	<permissions>
+		<permission name="collective.perseo: Manage SEO" acquire="True">
+		    <role name="Manager" />
+		    <role name="Site Administrator" />
+		</permission>
+	</permissions>
+</rolemap>
