@@ -1,185 +1,0 @@
-<metal:page define-macro="master">
-<tal:doctype tal:replace="structure string:&lt;!DOCTYPE html PUBLIC
-  &quot;-//W3C//DTD XHTML 1.0 Transitional//EN&quot;
-  &quot;http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd&quot;&gt;" />
-
-<html xmlns="http://www.w3.org/1999/xhtml" 
-    tal:define="portal_state context/@@plone_portal_state;
-        context_state context/@@plone_context_state;
-        plone_view context/@@plone;
-        lang portal_state/language;
-        view nocall:view | nocall: plone_view;
-        dummy python: plone_view.mark_view(view);
-        portal_url portal_state/portal_url;
-        checkPermission nocall: context/portal_membership/checkPermission;
-        site_properties context/portal_properties/site_properties;
-        ajax_load request/ajax_load | nothing;
-        ajax_include_head request/ajax_include_head | nothing;
-        perseo_context nocall: context/@@perseo-context;
-		itemscope_itemtype python:perseo_context.perseo_itemscope_itemtype();
-		itemtype python:perseo_context.perseo_itemtype()"
-    tal:attributes="lang lang;">
-
-    <metal:cache use-macro="context/global_cache_settings/macros/cacheheaders">
-    Get the global cache headers located in global_cache_settings.
-    </metal:cache>
-
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-
-    <!-- Forces IE8+ into newest rendering engine even if on an intranet. This has to be defined before any script/style tags. -->
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" /> 
-
-    <metal:baseslot define-slot="base">
-        <base tal:attributes="href plone_view/renderBase" /><!--[if lt IE 7]></base><![endif]-->
-    </metal:baseslot>
-
-    <tal:notajax tal:condition="python:not ajax_load or ajax_include_head">
-        <div tal:replace="structure provider:plone.htmlhead" />
-        <link tal:replace="structure provider:plone.htmlhead.links" />
-
-        <tal:comment replace="nothing"> 
-            Various slots where you can insert elements in the header from a template.
-        </tal:comment>
-        <metal:topslot define-slot="top_slot" />
-        <metal:headslot define-slot="head_slot" />
-        <metal:styleslot define-slot="style_slot" />
-        <metal:javascriptslot define-slot="javascript_head_slot" />
-
-        <meta name="viewport" content="width=device-width; initial-scale=0.6666; maximum-scale=1.0; minimum-scale=0.6666" />
-        <meta name="generator" content="Plone - http://plone.org" />
-    </tal:notajax>
-</head>
-
-<body tal:define="isRTL portal_state/is_rtl;
-                  sl python:plone_view.have_portlets('plone.leftcolumn', view);
-                  sr python:plone_view.have_portlets('plone.rightcolumn', view);
-                  body_class python:plone_view.bodyClass(template, view);
-                  sunburst_view python:context.restrictedTraverse('@@sunburstview')"
-    tal:attributes="class body_class;
-                    dir python:isRTL and 'rtl' or 'ltr';
-                    itemscope python:itemscope_itemtype and 'itemscope' or None;
-                    itemtype python:itemscope_itemtype and itemtype or None">
-
-<div id="visual-portal-wrapper">
-
-        <div id="portal-top"
-            class="row"
-            i18n:domain="plone"
-            tal:condition="not:ajax_load">
-<div class="cell width-full position-0"> <!-- TODO: Temporary, this one should be in the template that is inserted -->
-            <div tal:replace="structure provider:plone.portaltop" />
-</div>
-        </div>
-    <div id="portal-columns" class="row">
-
-        <div id="portal-column-content" class="cell" tal:attributes="class python:sunburst_view.getColumnsClass(view)">
-
-            <div id="viewlet-above-content" tal:content="structure provider:plone.abovecontent" tal:condition="not:ajax_load" />
-            
-            <metal:block define-slot="content">
-                <div metal:define-macro="content"
-                    tal:define="show_border context/@@plone/showEditableBorder; show_border python:show_border and not ajax_load"
-                    tal:attributes="class python:show_border and 'documentEditable' or ''">
-
-                    <div id="edit-bar" 
-                        tal:condition="show_border"
-                        tal:content="structure provider:plone.contentviews" />
-
-                    <div metal:use-macro="context/global_statusmessage/macros/portal_message">
-                     Status message
-                    </div>
-
-                    <metal:slot define-slot="body">
-                        <div id="content" itemprop="mainContentOfPage">
-
-                            <metal:header define-slot="header" tal:content="nothing">
-                            Visual Header
-                            </metal:header>
-
-                            <metal:bodytext define-slot="main">                                                            
-
-                             <div tal:replace="structure provider:plone.abovecontenttitle" tal:condition="not:ajax_load" />                             
-                             <metal:title define-slot="content-title">                              
-                                 <metal:comment tal:content="nothing">
-                                     If you write a custom title always use 
-                                     <h1 class="documentFirstHeading"></h1> for it
-                                 </metal:comment>
-                                 <h1 metal:use-macro="context/kss_generic_macros/macros/generic_title_view">              
-                                     Generic KSS Title. Is rendered with class="documentFirstHeading".                    
-                                 </h1>                                                                                    
-                             </metal:title>                                                                               
-                             <div tal:replace="structure provider:plone.belowcontenttitle" tal:condition="not:ajax_load" />                             
-
-                             <metal:description define-slot="content-description">                  
-                                 <metal:comment tal:content="nothing">
-                                     If you write a custom description always use 
-                                     <div class="documentDescription"></div> for it    
-                                 </metal:comment>
-                               
-                                 <div metal:use-macro="context/kss_generic_macros/macros/generic_description_view">         
-                                     Generic KSS Description. Is rendered with class="documentDescription".               
-                                 </div>
-                             </metal:description>                                                                         
-
-                             <div tal:replace="structure provider:plone.abovecontentbody" tal:condition="not:ajax_load" />                              
-                             <div id="content-core">                                                                      
-                                 <metal:text define-slot="content-core" tal:content="nothing">                            
-                                     Page body text                                                                       
-                                 </metal:text>                                                                            
-                             </div>                                                                                       
-                             <div tal:replace="structure provider:plone.belowcontentbody" tal:condition="not:ajax_load" />                              
-
-                            </metal:bodytext>
-                        </div>
-                    </metal:slot>
-
-                    <metal:sub define-slot="sub" tal:content="nothing">
-                       This slot is here for backwards compatibility only. 
-                       Don't use it in your custom templates.
-                    </metal:sub>
-                </div>
-            </metal:block>
-        
-            <div id="viewlet-below-content" tal:content="structure provider:plone.belowcontent" tal:condition="not:ajax_load" />
-        </div>
-
-        <tal:notajax tal:condition="not:ajax_load">
-        <div id="portal-column-one"
-       		itemscope="itemscope"
-       		itemtype="http://schema.org/WPSideBar"
-            class="cell width-1:4 position-0"
-            metal:define-slot="column_one_slot" 
-            tal:condition="sl"
-            tal:attributes="class python:isRTL and 'cell width-1:4 position-3:4' or 'cell width-1:4 position-0'">
-            <metal:portlets define-slot="portlets_one_slot">
-                <tal:block replace="structure provider:plone.leftcolumn" />
-            </metal:portlets>
-        </div>
-
-        <div id="portal-column-two"
-        	itemscope="itemscope"
-       		itemtype="http://schema.org/WPSideBar"
-            class="cell width-1:4 position-3:4"
-            metal:define-slot="column_two_slot" 
-            tal:condition="sr"
-            tal:attributes="class python:isRTL and 'cell width-1:4 position-0' or 'cell width-1:4 position-3:4'">
-            <metal:portlets define-slot="portlets_two_slot">
-                <tal:block replace="structure provider:plone.rightcolumn" />
-            </metal:portlets>
-        </div>
-        </tal:notajax>
-    </div>
-
-
-    <metal:block i18n:domain="plone" tal:condition="not:ajax_load">
-    	<div itemscope="itemscope" itemtype="http://schema.org/WPFooter">
-        	<div tal:replace="structure provider:plone.portalfooter" />
-        </div>
-    </metal:block>
-
-</div>
-</body>
-</html>
-
-</metal:page>
