@@ -1,6 +1,11 @@
 Changelog
 =========
 
+0.x.x (2011-xx-xx)
+------------------
+- Moved Schema.org customizations to collective.perseoschema package [fdelia]
+- Added Plone4.1 compatibility for 'Plone SEO Control Panel Tool' security [fdelia]
+
 0.4.1 (2011-09-28)
 ------------------
 - Fixed bug on update event [fdelia]
